yaml/deployment.yaml
---
# Source: sdb-controller/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-sdb-controller
  labels:
    helm.sh/chart: sdb-controller-0.1.0
    app.kubernetes.io/name: sdb-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sdb-controller
      app.kubernetes.io/instance: release-name
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
    - to: []
  ingress:
    - ports:
        - port: http
          protocol: TCP
---
# Source: sdb-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-sdb-controller
  labels:
    helm.sh/chart: sdb-controller-0.1.0
    app.kubernetes.io/name: sdb-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sdb-controller
    app.kubernetes.io/instance: release-name
  ports:
    - name: http
      port: 9090
      targetPort: metrics
---
# Source: sdb-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-sdb-controller
  labels:
    helm.sh/chart: sdb-controller-0.1.0
    app.kubernetes.io/name: sdb-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sdb-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: sdb-controller-0.1.0
        app.kubernetes.io/name: sdb-controller
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 0.1.0
        app.kubernetes.io/managed-by: Helm
      annotations:
        {}
    spec:
      serviceAccountName: release-name-sdb-controller
      securityContext:
        {}
      containers:
        - name: controller
          image: "ghcr.io/aexol-studio/sdb-controller:1755590250"
          imagePullPolicy: IfNotPresent
          args:
            []
          ports:
            - name: metrics
              containerPort: 9090
          resources:
            {}
          volumeMounts:
            []
      volumes:
        []
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
